@@ -22,16 +22,12 @@ package pl.skidam.automodpack.utils;
 
 import org.apache.commons.io.FileDeleteStrategy;
 import org.apache.commons.io.FileUtils;
-import pl.skidam.automodpack.StaticVariables;
 import pl.skidam.automodpack.config.Jsons;
 
 import java.io.*;
 import java.nio.channels.FileChannel;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.DirectoryStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
@@ -119,7 +115,7 @@ public class CustomFileUtils {
                     } else {
                         deleteEmptyFiles(path, deleteSubDirsToo, ignoreList);
                     }
-                } else if (Files.size(path) < 500) {
+                } else if (Files.size(path) < 300) {
                     if (Arrays.equals(Files.readAllBytes(path), smallDummyJar)) {
                         CustomFileUtils.forceDelete(path, true);
                     }
@@ -170,50 +166,27 @@ public class CustomFileUtils {
         }
     }
 
-    public static String getHashWithRetry(Path file, String algorithm) {
-        try {
-            return getHash(file, algorithm);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-
-        Path tempFile = Paths.get(StaticVariables.automodpackDir + File.separator + file.getFileName() + ".tmp");
-        try {
-            CustomFileUtils.copyFile(file, tempFile);
-            return getHash(tempFile, algorithm);
-        } catch (Exception e) {
-            e.printStackTrace();
-            throw new IllegalStateException("AutoModpack - Cannot copy file for hashing: " + file.toAbsolutePath(), e);
-        } finally {
-            tempFile.toFile().delete();
-        }
-    }
-
-    public static String getHash(Path file, String algorithm) {
+    public static String getHash(Path file, String algorithm) throws IOException, NoSuchAlgorithmException {
 
         if (!Files.exists(file)) {
             return null;
         }
 
-        try {
-            if (algorithm.equals("murmur")) {
-                return getCurseforgeMurmurHash(file);
-            }
-
-            MessageDigest digest = MessageDigest.getInstance(algorithm);
-            try (FileInputStream fis = new FileInputStream(file.toFile())) {
-                byte[] buffer = new byte[8192];
-                int bytesRead;
-                while ((bytesRead = fis.read(buffer)) != -1) {
-                    digest.update(buffer, 0, bytesRead);
-                }
-            }
-            byte[] hashBytes = digest.digest();
-            return convertBytesToHex(hashBytes);
-        } catch (NoSuchAlgorithmException | IOException e) {
-            e.printStackTrace();
-            return null;
+        if (algorithm.equals("murmur")) {
+            return getCurseforgeMurmurHash(file);
         }
+
+        MessageDigest digest = MessageDigest.getInstance(algorithm);
+        try (InputStream fis = Files.newInputStream(file)) {
+            byte[] buffer = new byte[8192];
+            int bytesRead;
+            while ((bytesRead = fis.read(buffer)) != -1) {
+                digest.update(buffer, 0, bytesRead);
+            }
+        }
+        byte[] hashBytes = digest.digest();
+        return convertBytesToHex(hashBytes);
+
     }
 
     private static String convertBytesToHex(byte[] bytes) {
@@ -230,8 +203,9 @@ public class CustomFileUtils {
 
 
     private static String getCurseforgeMurmurHash(Path file) throws IOException {
-
-        if (!Files.exists(file)) return null;
+        if (!Files.exists(file)) {
+            return null;
+        }
 
         final int m = 0x5bd1e995;
         final int r = 24;
@@ -239,63 +213,73 @@ public class CustomFileUtils {
         int seed = 1;
         int shift = 0x0;
 
-        // get file size
-        long flength = Files.size(file);
-
-        // convert file to byte array
-        byte[] byteFile = Files.readAllBytes(file);
-
         long length = 0;
         char b;
-        // get good bytes from file
-        for (int i = 0; i < flength; i++) {
-            b = (char) byteFile[i];
 
-            if (b == 0x9 || b == 0xa || b == 0xd || b == 0x20) {
-                continue;
-            }
+        // Read file in 8128-byte chunks
+        try (FileInputStream inputStream = new FileInputStream(file.toFile())) {
+            byte[] buffer = new byte[8128];
+            int bytesRead;
 
-            length += 1;
-        }
-        long h = (seed ^ length);
+            while ((bytesRead = inputStream.read(buffer)) != -1) {
+                for (int i = 0; i < bytesRead; i++) {
+                    b = (char) buffer[i];
 
-        for (int i = 0; i < flength; i++) {
-            b = (char) byteFile[i];
+                    if (b == 0x9 || b == 0xa || b == 0xd || b == 0x20) {
+                        continue;
+                    }
 
-            if (b == 0x9 || b == 0xa || b == 0xd || b == 0x20) {
-                continue;
-            }
-
-            if (b > 255) {
-                while (b > 255) {
-                    b -= 255;
+                    length += 1;
                 }
             }
+        }
 
-            k = k | ((long) b << shift);
+        long h = (seed ^ length);
 
-            shift = shift + 0x8;
+        try (FileInputStream inputStream = new FileInputStream(file.toFile())) {
+            byte[] buffer = new byte[8128];
+            int bytesRead;
 
-            if (shift == 0x20) {
-                h = 0x00000000FFFFFFFFL & h;
+            while ((bytesRead = inputStream.read(buffer)) != -1) {
+                for (int i = 0; i < bytesRead; i++) {
+                    b = (char) buffer[i];
 
-                k = k * m;
-                k = 0x00000000FFFFFFFFL & k;
+                    if (b == 0x9 || b == 0xa || b == 0xd || b == 0x20) {
+                        continue;
+                    }
 
-                k = k ^ (k >> r);
-                k = 0x00000000FFFFFFFFL & k;
+                    if (b > 255) {
+                        while (b > 255) {
+                            b -= 255;
+                        }
+                    }
 
-                k = k * m;
-                k = 0x00000000FFFFFFFFL & k;
+                    k = k | ((long) b << shift);
 
-                h = h * m;
-                h = 0x00000000FFFFFFFFL & h;
+                    shift = shift + 0x8;
 
-                h = h ^ k;
-                h = 0x00000000FFFFFFFFL & h;
+                    if (shift == 0x20) {
+                        h = 0x00000000FFFFFFFFL & h;
 
-                k = 0x0;
-                shift = 0x0;
+                        k = k * m;
+                        k = 0x00000000FFFFFFFFL & k;
+
+                        k = k ^ (k >> r);
+                        k = 0x00000000FFFFFFFFL & k;
+
+                        k = k * m;
+                        k = 0x00000000FFFFFFFFL & k;
+
+                        h = h * m;
+                        h = 0x00000000FFFFFFFFL & h;
+
+                        h = h ^ k;
+                        h = 0x00000000FFFFFFFFL & h;
+
+                        k = 0x0;
+                        shift = 0x0;
+                    }
+                }
             }
         }
 
@@ -319,11 +303,13 @@ public class CustomFileUtils {
         return String.valueOf(h);
     }
 
-    public static boolean compareFileHashes(Path file1, Path file2, String algorithm) {
+
+
+    public static boolean compareFileHashes(Path file1, Path file2, String algorithm) throws IOException, NoSuchAlgorithmException {
         if (!Files.exists(file1) || !Files.exists(file2)) return false;
 
-        String hash1 = getHashWithRetry(file1, algorithm);
-        String hash2 = getHashWithRetry(file2, algorithm);
+        String hash1 = getHash(file1, algorithm);
+        String hash2 = getHash(file2, algorithm);
 
         if (hash1 == null || hash2 == null) return false;
 
